# deep-agent-rag-stack

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  PROJECT_STATUS.md  README.md  README.zh-TW.md  ROADMAP.md  Summary.md  pyproject.toml  requirements.txt
.gemini/: settings.json
apps/api/: AGENTS.md  README.md  README.zh-TW.md  agent.py  alembic.ini  langgraph.json  langgraph_auth.py  langgraph_http_app.py  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260312_0001_auth_foundation.py  20260312_0002_reconcile_documents_schema.py  20260313_0003_document_chunks_phase35.py  20260313_0004_table_aware_chunks.py  20260313_0005_retrieval_foundation.py  20260313_0006_hnsw_retrieval_indexes.py  20260317_0007_match_chunks_rpc_contract.py  20260319_0008_document_preview_normalized_text.py  20260320_0009_document_preview_display_text.py  20260331_0010_unify_alembic_migrations.py  20260331_0011_document_chunk_regions.py  20260401_0012_retrieval_evaluation_phase7.py  20260401_0013_evaluation_run_profiles.py  20260405_0013_embedding_dimensions_openrouter_qwen3.py  20260405_0014_embedding_dimensions_qwen3_0_6b.py  20260405_0015_embedding_dimensions_openai_1536.py  20260407_0016_phase8_query_types.py  20260407_0017_phase83_document_level_representations.py  20260408_0018_phase8a_section_level_representations.py  20260409_0019_phase8b_evidence_units.py  20260410_0020_remove_evidence_units.py  20260416_0021_area_chat_sessions.py
apps/api/src/app/: __init__.py  main.py
apps/api/src/app/auth/: __init__.py  dependencies.py  verifier.py
apps/api/src/app/chat/: __init__.py
apps/api/src/app/chat/agent/: __init__.py  deep_agents.py  runtime.py
apps/api/src/app/chat/contracts/: __init__.py  types.py
apps/api/src/app/chat/runtime/: __init__.py  langgraph_agent.py  langgraph_auth.py  langgraph_boot_diagnostics.py  langgraph_http_app.py
apps/api/src/app/chat/tools/: __init__.py  retrieval.py  retrieval_planning.py  retrieval_serialization.py
apps/api/src/app/core/: __init__.py  settings.py
apps/api/src/app/db/: __init__.py  base.py  migration_runner.py  models.py  schema_guard.py  session.py  sql_types.py
apps/api/src/app/evaluation/: __init__.py
apps/api/src/app/evaluation/retrieval/: __init__.py  datasets.py  metrics.py  run_service.py  stage_runner.py
apps/api/src/app/evaluation/summary_compare/: __init__.py  benchmark.py  checkpoint.py  offline_judge.py
apps/api/src/app/routes/: __init__.py  areas.py  auth.py  directory.py  documents.py  evaluation.py  jobs.py  root.py
apps/api/src/app/schemas/: __init__.py  access.py  areas.py  auth.py  chat_sessions.py  directory.py  documents.py  evaluation.py  health.py  summary_compare_benchmark.py  summary_compare_checkpoint.py  summary_compare_offline_judge.py
apps/api/src/app/scripts/: __init__.py  compare_benchmark_runs.py  export_benchmark_snapshot.py  export_chat_contracts.py  export_openapi.py  generate_true_summary_compare_packages.py  import_benchmark_snapshot.py  prepare_external_benchmark.py  prepare_summary_compare_benchmark.py  prepare_uda_full_source.py  review_external_benchmark_with_openai.py  run_qasper_omx_loop.py  run_retrieval_eval.py  run_summary_compare_benchmark.py  run_summary_compare_checkpoint.py
apps/api/src/app/services/: __init__.py  access.py  areas.py  chat_sessions.py  chunking.py  directory.py  document_mentions.py  documents.py  embedding_text.py  embeddings.py  evaluation_dataset.py  evaluation_mapping.py  evaluation_metrics.py  evaluation_profiles.py  evaluation_runner.py  indexing.py  ingest.py  parsers.py  reranking.py  retrieval.py  retrieval_assembler.py  retrieval_query.py  retrieval_recall.py  retrieval_rerank.py  retrieval_routing.py  retrieval_runtime.py  retrieval_selection.py  retrieval_text.py  retrieval_types.py  runtime.py  storage.py  summary_compare_benchmark.py  summary_compare_checkpoint.py  summary_compare_offline_judge.py  tasks.py
apps/api/tests/: conftest.py  test_areas_api.py  test_auth_access.py  test_benchmark_snapshot_scripts.py  test_chat_retrieval_tool.py  test_chat_service.py  test_chat_sessions_api.py  test_contract_shapes.py  test_document_mentions.py  test_documents_api.py  test_embeddings.py  test_evaluation_metrics.py  test_evaluation_profiles.py  test_evaluation_runner.py  test_migration_runner.py  test_parsers.py  test_prepare_external_benchmark.py  test_prepare_uda_full_source.py  test_qasper_omx_loop.py  test_retrieval.py  test_retrieval_assembler.py  test_retrieval_evidence.py  test_retrieval_query.py  test_retrieval_routing.py  test_retrieval_selection.py  test_review_external_benchmark_with_openai.py  test_schema_guard.py  test_settings.py  test_summary_compare_benchmark.py  test_summary_compare_checkpoint.py  test_summary_compare_offline_judge.py  test_tasks.py
apps/worker/: AGENTS.md  README.md  README.zh-TW.md  pyproject.toml  requirements.txt
apps/worker/src/worker/: __init__.py  celery_app.py  chunking.py  db.py  db_types.py  embedding_text.py  embeddings.py  evidence_units.py  parsers.py  schema_guard.py  storage.py  synopsis.py
apps/worker/src/worker/core/: __init__.py  settings.py
apps/worker/src/worker/scripts/: __init__.py  healthcheck.py
apps/worker/src/worker/tasks/: __init__.py  health.py  indexing.py  ingest.py
apps/worker/tests/: test_celery_app.py  test_embeddings.py  test_evidence_units.py  test_indexing.py  test_ingest_task.py  test_parsers.py  test_settings.py  test_synopsis.py  test_worker_schema_guard.py
artifacts/: cnewsum-news-summary-curated-pilot-v1-run.json  cnewsum-news-summary-curated-pilot-v1-run.md  cocotrip-compare-curated-pilot-v1-run.json  (+43 more)
(+373 files in other folders)
