[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-agent-rag-stack"
version = "0.1.0"
description = "Workspace aggregator for the Deep Agent RAG Stack monorepo."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "卓品至", email = "easypinex@gmail.com" },
]
dependencies = [
  "deep-agent-api",
  "deep-agent-worker",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[tool.setuptools]
packages = []

[tool.uv.workspace]
members = [
  "apps/api",
  "apps/worker",
]

[tool.uv.sources]
deep-agent-api = { workspace = true }
deep-agent-worker = { workspace = true }
