[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-agent-rag-stack"
version = "0.1.0"
description = "Workspace aggregator for the Deep Agent RAG Stack monorepo."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "Apache-2.0"
authors = [
  { name = "卓品至", email = "easypinex@gmail.com" },
]
dependencies = [
  "deep-agent-api",
  "deep-agent-worker",
  "python-keycloak>=7.1.1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[tool.setuptools]
packages = []

[tool.uv.workspace]
members = [
  "apps/api",
  "apps/worker",
]

[tool.uv.sources]
deep-agent-api = { workspace = true }
deep-agent-worker = { workspace = true }

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.48",
]
