[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-agent-worker"
version = "0.1.0"
description = "Celery skeleton worker for the Deep Agent RAG Stack."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "celery[redis]>=5.4.0,<6.0.0",
  "minio>=7.2.12,<8.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "psycopg2-binary>=2.9.10,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
